build with module-info.java