@@ -14,6 +14,7 @@ buildscript {
 
 apply plugin: 'idea'
 apply plugin: 'java'
+apply plugin: 'java-library'
 apply plugin: 'org.springframework.boot'
 
 
@@ -21,17 +22,19 @@ repositories {
     mavenCentral()
 }
 
-compileJava {
-    sourceCompatibility = 9
-    targetCompatibility = 9
+afterEvaluate {
+    compileJava {
+        sourceCompatibility = 9
+        targetCompatibility = 9
 
-    options.fork = true
-    options.forkOptions.executable = 'javac'
-
-    options.encoding = "UTF-8"
-    options.compilerArgs += [
-            "--add-modules", "java.xml.ws.annotation"
-    ]
+        doFirst {
+            options.encoding = "UTF-8"
+            options.compilerArgs += [
+                    '--module-path', classpath.asPath,
+            ]
+            classpath = files()
+        }
+    }
 }
 
 dependencies {
@@ -39,16 +42,19 @@ dependencies {
 //    compile('org.springframework.boot:spring-boot-starter-data-jpa')
 //    compile('org.springframework.boot:spring-boot-starter-security')
 //    compile('org.springframework.boot:spring-boot-starter-thymeleaf')
-    compile('org.springframework.boot:spring-boot-starter-web')
+    implementation('org.springframework.boot:spring-boot-starter-web')
 
     // database
 //    compile group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.2.1'
 
+    compile group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.1'
+    compile group: 'javax.xml.ws', name: 'jaxws-api', version: '2.2.6'
+
     // https://mvnrepository.com/artifact/org.projectlombok/lombok
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.16.18'
 
-    testCompile('org.springframework.boot:spring-boot-starter-test')
-    testCompile('org.springframework.security:spring-security-test')
+    testImplementation('org.springframework.boot:spring-boot-starter-test')
+    testImplementation('org.springframework.security:spring-security-test')
 }
 
 task wrapper (type: Wrapper){
